[package]
name = "nexus_sort_core"
version = "1.0.1" # Updated to a final version
edition = "2021"
authors = ["Esrbwt <esrbwt20@gmail.com>"]
description = "A cognitive, multi-strategy sorting framework designed for high performance."
repository = "https://github.com/Esrbwt1/nexus-sort.git"
readme = "README.md"
license = "MIT"
keywords = ["sort", "algorithm", "performance", "radix", "introsort"]
categories = ["algorithms", "data-structures"]

[dependencies]
num-traits = "0.2.18"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.8.5"

[[bench]]
name = "nexus_benchmark"
harness = false